css/styles.css
* {
  box-sizing: border-box;
}

body {
  background: #111;
  color: white;
  font-family: sans-serif;

  margin: 0;
  padding: 20px;
}

/* ---------------- */
/* CAROUSEL */
/* ---------------- */

.container {
  display: grid;
  /* grid-template-columns: repeat(6, 1fr); */
  /* grid-template-rows: 60px repeat(4, 350px); */
}

.carousel-container {
  position: relative;
}

.carousel-container:empty {
  display: none;
}

.tableAlbumsDiv {
  position: relative;
}

.carousel {
  display: flex;

  gap: 15px;

  overflow-x: scroll;

  scroll-behavior: smooth;

  padding: 20px 0;

  /* grid-row: 2; */

  cursor: grab;

  user-select: none;
}

.carousel:empty {
  display: none;
}

.carousel::-webkit-scrollbar {
  display: none;
}
.container::-webkit-scrollbar {
  display: none;
}

.dragging {
  cursor: grabbing;
}

.searchDiv {
  display: flex;
  /* grid-row: 1/2; */
}

/* .controls {
  grid-row: 3;
  grid-column: 1/3;
} */

/* ---------------- */
/* CARD */
/* ---------------- */

.card {
  width: 120px;

  height: max-content;

  background: #222;

  border-radius: 12px;

  overflow: hidden;

  flex-shrink: 0;

  transition: transform 0.2s;

  cursor: pointer;
}

.card:hover {
  transform: scale(1.03);
}

.card img {
  width: 120px;
  height: 120px;

  display: block;

  object-fit: cover;
}

.card h2 {
  font-size: 12pt;
}

.info {
  padding: 10px;
}

.title {
  font-size: 11pt;

  font-weight: bold;
}

.artist {
  font-size: 10pt;

  opacity: 0.7;
}

/* ---------------- */
/* BUTTONS */
/* ---------------- */

button {
}

#prev {
  left: -10px;
  position: absolute;

  top: 40%;

  transform: translateY(-50%);

  z-index: 10;

  border: none;

  background: rgba(0, 0, 0, 0.7);

  color: white;

  font-size: 24px;

  padding: 10px 15px;

  cursor: pointer;

  border-radius: 10px;
}

#next {
  right: -10px;
  position: absolute;

  top: 40%;

  transform: translateY(-50%);

  z-index: 10;

  border: none;

  background: rgba(0, 0, 0, 0.7);

  color: white;

  font-size: 24px;

  padding: 10px 15px;

  cursor: pointer;

  border-radius: 10px;
}

.btnDeleteAlbum {
  top: 5px;
  right: 5px;

  border: none;

  position: absolute;

  display: block;

  background: rgba(0, 0, 0, 0.7);

  color: white;

  font-size: 24px;

  padding-bottom: 5px;
  padding-left: 10px;
  padding-right: 10px;

  cursor: pointer;

  border-radius: 10px;
}

/* ---------------- */
/* OTHERS */
/* ---------------- */

.contenedorTop {
  display: flex;

  flex-wrap: wrap;

  gap: 20px;

  margin: 1rem;

  padding: 0.5rem;

  border-radius: 0.5rem;

  background-color: rgba(1, 1, 49, 0.849);
}

.matAndList {
  display: block;
}

.item {
  display: flex;

  flex-wrap: wrap;

  gap: 0.5rem;
}

.list {
  background-color: antiquewhite;
}

/* ---------------- */
/* GRID */
/* ---------------- */

#gridE {
  /* background-color: blanchedalmond; */

  width: 80vw;

  max-width: 900px;

  max-height: 100vh;

  overflow: scroll;

  scrollbar-width: none;

  display: grid;

  grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));

  gap: 0.5rem;

  margin: 0.5rem;

  /* border-radius: 1rem; */
  /* 
  grid-column: 2/5;

  grid-row: 3/7; */

  align-content: start;

  /* row-gap: 0.5rem; */
}
#gridE::-webkit-scrollbar {
  display: none; /* Chrome/Safari/Edge */
}

/* ---------------- */
/* CELLS */
/* ---------------- */

.cuadrado {
  position: relative;

  overflow: visible;

  aspect-ratio: 1 / 1;

  width: 100%;

  background: rgb(53, 192, 192);

  display: flex;

  justify-content: center;

  align-items: center;
}

/* Mobile */
@media (max-width: 480px) {
  .container {
    display: grid;
    grid-template-columns: 1fr;
    width: 100%;
    overflow-x: hidden;
  }

  .searchDiv {
    grid-row: 1;
  }

  .carousel-container {
    grid-row: 2;
    width: 100%;
    overflow-x: hidden;
  }

  .carousel {
    grid-row: 2;
    width: 100%;
    overflow-x: hidden;
  }

  .controls {
    grid-row: 3;
    justify-self: center;
  }

  #gridE {
    grid-row: 4;
    width: 100%;
  }

  .tableAlbumsDiv {
    grid-row: 5;
  }
}

/* Tablet */
@media (min-width: 481px) and (max-width: 768px) {
  .container {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
  }

  .controls {
    grid-column: 1;
  }

  #gridE {
    grid-column: 1;
  }

  .tableAlbumsDiv {
    grid-column: 1;
    grid-row: 3;
  }

  .searchDiv {
    grid-column: 1;
  }

  .carousel-container {
    grid-row: 2;
    grid-column: 1;
    width: 100%;
    overflow-x: hidden;
  }

  .carousel {
    width: 100%;
    overflow-x: hidden;
  }
}

/* Laptop */
@media (min-width: 769px) and (max-width: 1024px) {
  .container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
  }

  .controls {
    grid-column: 1;
  }

  #gridE {
    grid-column: 2;
  }

  .tableAlbumsDiv {
    grid-column: 3;
    grid-row: 3;
  }

  .searchDiv {
    grid-column: 2;
  }

  .carousel-container {
    grid-row: 2;
    grid-column: 1 / -1;
  }
}

/* Desktop */
@media (min-width: 1200px) {
  .container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
  }

  .controls {
    grid-column: 1;
  }

  #gridE {
    grid-column: 2;
  }

  .tableAlbumsDiv {
    grid-column: 3;
    grid-row: 3;
  }

  .searchDiv {
    grid-column: 2;
  }

  .carousel-container {
    grid-row: 2;
    grid-column: 1/8;
  }
}

